--- a/README.adoc
+++ b/README.adoc
@@ -25,6 +25,11 @@ This is Work In Progress.
 
 In simplest case, ladici deployment consists of single machine/node running ladici. The process running HQ can also run a factory and is pre-configured so with one that runs lane to create tarballs from sources.
 
+== Download (via GIT)
+
+ * https://gitea.ladish.org/LADI/ladici[Upstream repo - self hosted]
+ * https://github.com/LADI/ladici/[GitHub repo - cloud hosted]
+
 == Usage
 
 Running "./ladici hq" from source checkout will start the HQ node.
